# CLIColonySimRTSGame

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: GameLoop.cpp  GameLoop.h
src/Core/CommandSystem/Command/: Command.cpp  Command.h
src/Core/CommandSystem/CommandProcessor/: CommandProcessor.cpp  CommandProcessor.h
src/Core/CommandSystem/CommandRegistry/: CommandRegistry.cpp  CommandRegistry.h
src/Core/CommandSystem/CommandsList/: CommandsList.cpp  CommandsList.h
src/Core/Coordinates/: Position2D.h
src/Entity/: Entity.cpp  Entity.h
src/Entity/Buildings/: Building.cpp  Building.h
src/Entity/Units/: Unit.cpp  Unit.h
src/Map/: World.cpp  World.h
src/UI/: ConsoleUI.cpp  ConsoleUI.h
